--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script
-      src="https://kit.fontawesome.com/1e1e1a8121.js"
-      crossorigin="anonymous"
-    ></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/fontawesome.min.css"
-      integrity="sha512-RvQxwf+3zJuNwl4e0sZjQeX7kUa3o82bDETpgVCH2RiwYSZVDdFJ7N/woNigN/ldyOOoKw8584jM4plQdt8bhA=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -26,17 +22,26 @@
         <nav>
           <a href="index.html" class="my-logo link">V.V.</a>
           <ul class="nav-menu">
-            <li><a href="#contact" class="link">Contact</a></li>
             <li>
-              <a href="#project" class="link">Projects </a>
+              <a href="#contact" class="link"
+                >Contact <i class="fa fa-address-card"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#project" class="link"
+                >Projects <i class="fa fa-diagram-project"></i
+              ></a>
             </li>
           </ul>
         </nav>
         <div class="container">
           <div class="intro-content">
-            <h1>Hello, I am Visay</h1>
-            <p>I am a Frontend Developer</p>
-            <p>I like to learn, create, build user interface</p>
+            <h1>Hello, I'm Visay</h1>
+            <p>I am a Html Email / Frontend Developer</p>
+            <p>I build responsive user interface</p>
+            <p>Available for work</p>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           </div>
         </div>
       </div>
@@ -51,92 +56,325 @@
               <img src="/image/IMG_4012.JPG" alt="image of me" />
               <p>
                 Hi, my name is Visay Vang. I'm a Web Developer with a passion
-                for frontend development and design. I came across code 1 year
+                for Web and HTML Email development. I came across code 1 year
                 ago and fell in love with it. I am looking toward a career that
                 allow me to bring my creativity through crafting beautiful
                 software and engaging experiences.
               </p>
               <p>
-                Outside of code I love to spend time with my wife and children.
-                I like to go fishing, playing sports and hiking.
+                Outside from code I love to spend time with my family and
+                hangout with friends. I like to play sports, service in the
+                church and fish.
               </p>
             </div>
-            <div class="hobby-content">
-              <h4>Hobby</h4>
-              <div class="hobby-inner-content">
-                <div class="content column-1">
-                  <i class="fa-thin fa-computer">Web Design</i>
-                </div>
-                <div class="content column-2">
-                  <i class="fa-light fa-basketball-hoop">Basketball & Soccer</i>
-                </div>
-                <div class="content column-3">
-                  <i class="fa-solid fa-family">Spending Time with Family</i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--Skills-->
-      <section class="section-2 sect-column skills">
-        <div class="wrapper">
-          <div class="skills-container">
-            <h1>Skills</h1>
-            <p>I am always eager to learn more in this industry.</p>
             <div class="skills-content">
-              <div class="skill-column">
-                <img src="/image/html5.svg" alt="html" />
-                <p>HTML</p>
-              </div>
-              <div class="skill-column">
-                <img src="/image/css3.svg" alt="css" />
-                <p>CSS</p>
-              </div>
-              <div class="skill-column">
-                <img src="/image/sass.svg" alt="sass" />
-                <p>Sass</p>
-              </div>
-              <div class="skill-column">
-                <img src="/image/js.svg" alt="javascript" />
-                <p>JavaScript</p>
-              </div>
-              <div class="skill-column">
-                <img src="/image/github.svg" alt="github" />
-                <p>Github</p>
-              </div>
-              <div class="skill-column">
-                <img src="/image/figma.svg" alt="figma" />
-                <p>Figma</p>
+              <h1>Skills</h1>
+              <div class="skills-inner-content">
+                <div class="skills column-1">
+                  <img src="/image/html5.svg" alt="" />
+                  <p>HTML</p>
+                </div>
+                <div class="skills column-2">
+                  <img src="/image/css3.svg" alt="" />
+                  <p>CSS</p>
+                </div>
+                <div class="skills column-3">
+                  <img src="/image/sass.svg" alt="" />
+                  <p>Sass</p>
+                </div>
+                <div class="skills column-3">
+                  <img src="/image/js.svg" alt="" />
+                  <p>JavaScript</p>
+                </div>
+                <div class="skills column-3">
+                  <img src="/image/figma.svg" alt="" />
+                  <p>Figma</p>
+                </div>
+                <div class="skills column-3">
+                  <img src="/image/github.svg" alt="" />
+                  <p>Github</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!--HTML Email Project, Section 3-->
       <section class="section-3 sect-column projects" id="project">
         <div class="wrapper">
           <div class="project-container">
-            <h1>Projects I have done</h1>
+            <h1>HTML EMAILS</h1>
             <div class="project-content">
-              <div class="project-column">1</div>
-              <div class="project-column">2</div>
-              <div class="project-column">3</div>
-              <div class="project-column">4</div>
-              <div class="project-column">5</div>
+              <div class="project-column">
+                <a href="https://dominotransaction.netlify.app" target="_blank">
+                  <div class="card">
+                    <img src="/image/dominoSnip.jpg" alt="domino email" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Domino Transaction</p>
+                    <p>Html, Css</p>
+                    <p>Responsive Transaction Email</p>
+                  </div>
+                </a>
+              </div>
+              <div class="project-column">
+                <a
+                  href="https://creditkarmhtmlemail.netlify.app"
+                  target="_blank"
+                >
+                  <div class="card">
+                    <img src="/image/creditkarmaSnip.jpg" alt="" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Good Credit</p>
+                    <p>Html, Css</p>
+                    <p>Responsive Notification Email</p>
+                  </div>
+                </a>
+              </div>
+              <div class="project-column">
+                <a href="https://shoecarnivalemail.netlify.app" target="_blank">
+                  <div class="card">
+                    <img
+                      src="/image/shoeCarnivalSnip.jpg"
+                      alt="shoe carnival"
+                    />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Shoe Carnival</p>
+                    <p>Html, Css</p>
+                    <p>Responsive Promotional Email</p>
+                  </div>
+                </a>
+              </div>
+              <div class="project-column">
+                <a href="https://adidashtmlemail.netlify.app" target="_blank">
+                  <div class="card">
+                    <img src="/image/adidasSnip.jpg" alt="adidas email" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Adidas</p>
+                    <p>Html, Css</p>
+                    <p>Responsive Promotional Email</p>
+                  </div>
+                </a>
+              </div>
+              <div class="project-column">
+                <a href="https://lidshtmlemail.netlify.app" target="_blank">
+                  <div class="card">
+                    <img src="/image/lidsSnip.jpg" alt="lids email" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Lids</p>
+                    <p>Html, Css</p>
+                    <p>Responsive Promotional Email</p>
+                  </div>
+                </a>
+              </div>
               <div class="project-column">6</div>
             </div>
           </div>
         </div>
       </section>
+      <!--Landing Page, Section 4-->
+      <section class="section-4">
+        <div class="wrapper">
+          <div class="landing-page-container">
+            <h1>LANDING PAGE</h1>
+            <div class="landing-page-content">
+              <div class="landing-page-column">
+                <a
+                  href="https://visayundergroundshirt.netlify.app"
+                  target="_blank"
+                >
+                  <div class="img-div">
+                    <img src="/image/t-shirt.png" alt="" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">T-Shirt Printing</p>
+                    <p>Html, Sass, JavaScript</p>
+                    <p>
+                      Used grid and flexbox for responsiveness and layouts.
+                      Dropdown nav menu and mobile responsive menu.
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="landing-page-column">
+                <a href="https://visayloopstudios.netlify.app" target="_blank">
+                  <div class="img-div">
+                    <img src="/image/loopstudios.jpg" alt="" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Loopstudios</p>
+                    <p>Html, CSS, JavaScript</p>
+                    <p>
+                      Responsive landing page using grid and flexbox for
+                      layouts. Also has responsive mobile menu
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="landing-page-column">
+                <a href="https://digitalvisual.netlify.app" target="_blank">
+                  <div class="img-div">
+                    <img src="/image/sunnyside.png" alt="" />
+                  </div>
+                  <div class="description">
+                    <p class="bold-text">Sunnyside</p>
+                    <p>Html, CSS, JavaScript</p>
+                    <p>
+                      Responsive landing page with flexbox and grid for layouts
+                      and also a responsive mobile menu.
+                    </p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End of Landing Page-->
+      <!--Banner, Section 5-->
+      <section class="section-5">
+        <div class="wrapper">
+          <div class="banner-content">
+            <div class="inner-banner">
+              <h1>Lets <span class="orange-text">Work</span> Together</h1>
+            </div>
+            <div class="btn-div">
+              <a href="#contact">
+                <button class="contact-btn">Hire Me</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End of Banner Section-->
+      <section class="section-6">
+        <div class="wrapper">
+          <h1>MINI PROJECTS</h1>
+          <div class="mini-project-content">
+            <div class="mini-inner-content min-col">
+              <a
+                href="https://visaybillsplitcalculator.netlify.app"
+                target="_blank"
+              >
+                <div class="img-div">
+                  <img src="/image/billsplitter.png" alt="" />
+                </div>
+                <div class="description">
+                  <p class="bold-text">Bill Split Calculator</p>
+                  <p>Html, Sass, JavaScript</p>
+                  <p>
+                    You and a group of friends go out to eat and have to split
+                    the bill. Enter bill amount and the number of persons with
+                    you and get the answers. Only accept numbers, an error will
+                    appear if letters are entered.
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="mini-inner-content min-col">
+              <a href="https://visayformvalidation.netlify.app" target="_blank">
+                <div class="img-div">
+                  <img src="/image/formvalidation.png" alt="" />
+                </div>
+                <div class="description">
+                  <p class="bold-text">Form Validation</p>
+                  <p>Html, CSS, JavaScript</p>
+                  <p>
+                    If input field are empty it will throw an error and red
+                    border. Once input field has the correct value the error
+                    message and red border will disappear.
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="mini-inner-content min-col">
+              <a
+                href="https://visaypasswordgenerator.netlify.app"
+                target="_blank"
+              >
+                <div class="img-div">
+                  <img src="/image/password.png" alt="" />
+                </div>
+                <div class="description">
+                  <p class="bold-text">Password Generator</p>
+                  <p>Html, CSS, JavaScript</p>
+                  <p>
+                    You can set character length and decide whether to include
+                    lowercase, uppercase, special characters or numbers in your
+                    password. Once you decide on a password you could click on
+                    it and it will automatically copy it for you.
+                  </p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer id="contact">
+    <!--Form Section-->
+    <section class="contact-form">
       <div class="wrapper">
-        <div class="footer-container">
-          <h1>Get In Touch</h1>
-          <p>Phone: 414-243-4862</p>
-          <p>Email: vsvang@gmail.com</p>
+        <h1>GET IN TOUCH</h1>
+        <div class="form-container">
+          <form action="" class="form">
+            <div class="form-group">
+              <input
+                type="text"
+                class="name"
+                id="name"
+                placeholder="Name"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="text"
+                class="name"
+                id="email"
+                placeholder="Email"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <textarea
+                rows="10"
+                cols="25"
+                id="message"
+                placeholder="Message"
+              ></textarea>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn">Send</button>
+              <button type="reset" class="btn">Reset</button>
+            </div>
+          </form>
         </div>
       </div>
+    </section>
+    <!--End Contact Form-->
+    <footer class="footer" id="contact">
+      <div class="wrapper">
+        <div class="footer-content">
+          <div class="contact footer-col">
+            <p>Phone: 414-243-4862</p>
+            <p>Email: vsvang@gmail.com</p>
+          </div>
+          <div class="icons footer-col">
+            <a href="#">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <small>copyright @visayvang 2022</small>
     </footer>
   </body>
 </html>
