12/11/22, change font color, change font size, remove html projects

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
         </nav>
         <div class="container">
           <div class="intro-content">
-            <h1>Hello, I'm Visay</h1>
+            <h1>Hello,<span class="orange-text"> I'm Visay</span></h1>
             <p>I am a Html Email / Frontend Developer</p>
             <p>I build responsive user interface</p>
             <p>Available for work</p>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/vsvang/" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -134,33 +138,6 @@
                 </a>
               </div>
               <div class="project-column">
-                <a href="https://shoecarnivalemail.netlify.app" target="_blank">
-                  <div class="card">
-                    <img
-                      src="/image/shoeCarnivalSnip.jpg"
-                      alt="shoe carnival"
-                    />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Shoe Carnival</p>
-                    <p>Html, Css</p>
-                    <p>Responsive Promotional Email</p>
-                  </div>
-                </a>
-              </div>
-              <div class="project-column">
-                <a href="https://adidashtmlemail.netlify.app" target="_blank">
-                  <div class="card">
-                    <img src="/image/adidasSnip.jpg" alt="adidas email" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Adidas</p>
-                    <p>Html, Css</p>
-                    <p>Responsive Promotional Email</p>
-                  </div>
-                </a>
-              </div>
-              <div class="project-column">
                 <a href="https://lidshtmlemail.netlify.app" target="_blank">
                   <div class="card">
                     <img src="/image/lidsSnip.jpg" alt="lids email" />
@@ -172,7 +149,6 @@
                   </div>
                 </a>
               </div>
-              <div class="project-column">6</div>
             </div>
           </div>
         </div>
@@ -372,10 +348,10 @@
             <p>Email: vsvang@gmail.com</p>
           </div>
           <div class="icons footer-col">
-            <a href="#">
+            <a href="https://github.com/" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/vsvang/" target="_blank">
               <i class="fa-brands fa-linkedin"></i>
             </a>
           </div>
