12/12/22, add react icon, added hover all btn, change responsive grid

--- a/index.html
+++ b/index.html
@@ -86,17 +86,22 @@
                   <img src="/image/sass.svg" alt="" />
                   <p>Sass</p>
                 </div>
-                <div class="skills column-3">
+                <div class="skills column-4">
                   <img src="/image/js.svg" alt="" />
                   <p>JavaScript</p>
                 </div>
-                <div class="skills column-3">
+                <div class="skills column-5">
                   <img src="/image/figma.svg" alt="" />
                   <p>Figma</p>
                 </div>
-                <div class="skills column-3">
-                  <img src="/image/github.svg" alt="" />
-                  <p>Github</p>
+                <div class="skills column-6">
+                  <img src="/image/git.svg" alt="" />
+                  <p>Git</p>
+                </div>
+                <div class="skills column-7">
+                  <img src="/image/react.svg" alt="" />
+                  <p>React</p>
+                  <small>(Still learning)</small>
                 </div>
               </div>
             </div>
@@ -340,12 +345,20 @@
       </div>
     </section>
     <!--End Contact Form-->
+    <!--Back to top-->
+    <div class="back-to-top">
+      <a href="#"
+        ><i class="fa-solid fa-arrow-up-from-bracket"></i> Back to Top</a
+      >
+    </div>
+    <!--End back to top-->
+    <!--Footer-->
     <footer class="footer" id="contact">
       <div class="wrapper">
         <div class="footer-content">
           <div class="contact footer-col">
-            <p>Phone: 414-243-4862</p>
-            <p>Email: vsvang@gmail.com</p>
+            <p><i class="fa-solid fa-phone"></i> 414-243-4862</p>
+            <p><i class="fa-regular fa-envelope"></i> vsvang@gmail.com</p>
           </div>
           <div class="icons footer-col">
             <a href="https://github.com/" target="_blank">
@@ -357,7 +370,6 @@
           </div>
         </div>
       </div>
-      <small>copyright @visayvang 2022</small>
     </footer>
     <script src="/js/main.js"></script>
   </body>
