12/12/22, added modal html, style modal, added open and close modal btn, added functionality to btn

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <header class="background">
       <div class="wrapper">
         <nav>
-          <a href="index.html" class="my-logo link">V.V.</a>
+          <a href="index.html" class="my-logo link">V.V</a>
           <ul class="nav-menu">
             <li>
               <a href="#contact" class="link"
-                >Contact <i class="fa fa-address-card"></i
+                >CONTACT <i class="fa fa-address-card"></i
               ></a>
             </li>
             <li>
               <a href="#project" class="link"
-                >Projects <i class="fa fa-diagram-project"></i
+                >PROJECTS <i class="fa fa-diagram-project"></i
               ></a>
             </li>
           </ul>
@@ -59,17 +59,17 @@
               <h1>About Me</h1>
               <img src="/image/IMG_4012.JPG" alt="image of me" />
               <p>
-                Hi, my name is Visay Vang. I'm a Web Developer with a passion
-                for Web and HTML Email development. I came across code 1 year
-                ago and fell in love with it. I am looking toward a career that
-                allow me to bring my creativity through crafting beautiful
-                software and engaging experiences.
+                Hi, my name is Visay Vang, I found code a year ago and like it
+                alot. I haven't stop learning and coding since. I look toward a
+                career where I can bring my creativity for web design. I am
+                ready to make this jump into the tech industry.
               </p>
               <p>
                 Outside from code I love to spend time with my family and
                 hangout with friends. I like to play sports, service in the
                 church and fish.
               </p>
+              <button class="read-btn" id="read-more-btn">Read more...</button>
             </div>
             <div class="skills-content">
               <h1>Skills</h1>
@@ -108,7 +108,40 @@
           </div>
         </div>
       </section>
+      <!--Modal Section-->
+      <div class="modal-container" id="modal">
+        <div class="modal-close-btn">
+          <button class="modal-btn" id="modal-btn">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+        <div class="modal-content">
+          <h1>More of me</h1>
 
+          <div class="paragraph">
+            <p>
+              My journey into code was an unexpected one. I came from a
+              manufacturing background working as a CNC Machinist. I wanted to
+              further my career by learning cnc machine codes and came across
+              software developer. Software code look intimidating and I thought
+              to myself that you would need a four year college degree and be
+              super smart to learn.
+            </p>
+            <p>
+              After doing my research and coming upon videos on youtube from
+              self-taught developer it change my perspective. It gave me the
+              drive to learn code and the tech industry. After coding my first
+              "Hello World", I was hooked and saw the power it has. I wanted the
+              power in my hand and decided to embarked on this journey.
+            </p>
+            <p>
+              I am married with 4 children. I love spending time with my
+              children.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!--End of Modal-->
       <!--HTML Email Project, Section 3-->
       <section class="section-3 sect-column projects" id="project">
         <div class="wrapper">
