12/12/22, changes to about me modal, changes to all project repsonsiveness

--- a/index.html
+++ b/index.html
@@ -121,22 +121,18 @@
           <div class="paragraph">
             <p>
               My journey into code was an unexpected one. I came from a
-              manufacturing background working as a CNC Machinist. I wanted to
+              non-traditional background working as a CNC Machinist. I wanted to
               further my career by learning cnc machine codes and came across
-              software developer. Software code look intimidating and I thought
-              to myself that you would need a four year college degree and be
-              super smart to learn.
+              software development. Software development looked intimidating and
+              I thought to myself that you would need a four year college degree
+              and be super smart to learn.
             </p>
             <p>
               After doing my research and coming upon videos on youtube from
-              self-taught developer it change my perspective. It gave me the
-              drive to learn code and the tech industry. After coding my first
-              "Hello World", I was hooked and saw the power it has. I wanted the
-              power in my hand and decided to embarked on this journey.
-            </p>
-            <p>
-              I am married with 4 children. I love spending time with my
-              children.
+              self-taught developers it change my perspective. I coded my first
+              "Hello World", in JavaScript and I was hooked. I saw the power it
+              has and I wanted the power in my hand so I decided to embarked on
+              this journey.
             </p>
           </div>
         </div>
