12/13/22, removed html email projects, added max-height to img, change bg color

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main>
       <!--About Me-->
-      <section class="section-1 sect-column about-me">
+      <section class="section-1 about-me">
         <div class="wrapper">
           <div class="about-me-container">
             <div class="about-me-content">
@@ -138,55 +138,7 @@
         </div>
       </div>
       <!--End of Modal-->
-      <!--HTML Email Project, Section 3-->
-      <section class="section-3 sect-column projects" id="project">
-        <div class="wrapper">
-          <div class="project-container">
-            <h1>HTML EMAILS</h1>
-            <div class="project-content">
-              <div class="project-column">
-                <a href="https://dominotransaction.netlify.app" target="_blank">
-                  <div class="card">
-                    <img src="/image/dominoSnip.jpg" alt="domino email" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Domino Transaction</p>
-                    <p>Html, Css</p>
-                    <p>Responsive Transaction Email</p>
-                  </div>
-                </a>
-              </div>
-              <div class="project-column">
-                <a
-                  href="https://creditkarmhtmlemail.netlify.app"
-                  target="_blank"
-                >
-                  <div class="card">
-                    <img src="/image/creditkarmaSnip.jpg" alt="" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Good Credit</p>
-                    <p>Html, Css</p>
-                    <p>Responsive Notification Email</p>
-                  </div>
-                </a>
-              </div>
-              <div class="project-column">
-                <a href="https://lidshtmlemail.netlify.app" target="_blank">
-                  <div class="card">
-                    <img src="/image/lidsSnip.jpg" alt="lids email" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Lids</p>
-                    <p>Html, Css</p>
-                    <p>Responsive Promotional Email</p>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
       <!--Landing Page, Section 4-->
       <section class="section-4">
         <div class="wrapper">
