12/13/22, added hover effect to btn, added new landing page project, adjust img height

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   </div>
                   <div class="description">
                     <p class="bold-text">T-Shirt Printing</p>
-                    <p>Html, Sass, JavaScript</p>
+                    <small>Html, Sass, JavaScript</small>
                     <p>
                       Used grid and flexbox for responsiveness and layouts.
                       Dropdown nav menu and mobile responsive menu.
@@ -170,7 +170,7 @@
                   </div>
                   <div class="description">
                     <p class="bold-text">Loopstudios</p>
-                    <p>Html, CSS, JavaScript</p>
+                    <small>Html, CSS, JavaScript</small>
                     <p>
                       Responsive landing page using grid and flexbox for
                       layouts. Also has responsive mobile menu
@@ -179,13 +179,13 @@
                 </a>
               </div>
               <div class="landing-page-column">
-                <a href="https://digitalvisual.netlify.app" target="_blank">
+                <a href="https://visayvangadidas.netlify.app" target="_blank">
                   <div class="img-div">
-                    <img src="/image/sunnyside.png" alt="" />
+                    <img src="/image/adidas.png" alt="" />
                   </div>
                   <div class="description">
-                    <p class="bold-text">Sunnyside</p>
-                    <p>Html, CSS, JavaScript</p>
+                    <p class="bold-text">Adidas</p>
+                    <small>Html, CSS, JavaScript</small>
                     <p>
                       Responsive landing page with flexbox and grid for layouts
                       and also a responsive mobile menu.
@@ -228,7 +228,7 @@
                 </div>
                 <div class="description">
                   <p class="bold-text">Bill Split Calculator</p>
-                  <p>Html, Sass, JavaScript</p>
+                  <small>Html, Sass, JavaScript</small>
                   <p>
                     You and a group of friends go out to eat and have to split
                     the bill. Enter bill amount and the number of persons with
@@ -245,7 +245,7 @@
                 </div>
                 <div class="description">
                   <p class="bold-text">Form Validation</p>
-                  <p>Html, CSS, JavaScript</p>
+                  <small>Html, CSS, JavaScript</small>
                   <p>
                     If input field are empty it will throw an error and red
                     border. Once input field has the correct value the error
@@ -264,7 +264,7 @@
                 </div>
                 <div class="description">
                   <p class="bold-text">Password Generator</p>
-                  <p>Html, CSS, JavaScript</p>
+                  <small>Html, CSS, JavaScript</small>
                   <p>
                     You can set character length and decide whether to include
                     lowercase, uppercase, special characters or numbers in your
