12/13/22, changes to mini projects, changes to description

--- a/index.html
+++ b/index.html
@@ -220,20 +220,20 @@
           <div class="mini-project-content">
             <div class="mini-inner-content min-col">
               <a
-                href="https://visaybillsplitcalculator.netlify.app"
+                href="https://visaydiscountcalculator.netlify.app"
                 target="_blank"
               >
                 <div class="img-div">
-                  <img src="/image/billsplitter.png" alt="" />
+                  <img src="/image/discountcalc.jpg" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">Bill Split Calculator</p>
-                  <small>Html, Sass, JavaScript</small>
+                  <p class="bold-text">Discount Calculator</p>
+                  <small>Html, CSS, JavaScript</small>
                   <p>
-                    You and a group of friends go out to eat and have to split
-                    the bill. Enter bill amount and the number of persons with
-                    you and get the answers. Only accept numbers, an error will
-                    appear if letters are entered.
+                    Enter the full price and select the discount percentage to
+                    calculate your results. No more guessing what the price
+                    could have been with this calculator in your hand. An error
+                    message will appear if letters are enter in the input field.
                   </p>
                 </div>
               </a>
@@ -245,7 +245,7 @@
                 </div>
                 <div class="description">
                   <p class="bold-text">Form Validation</p>
-                  <small>Html, CSS, JavaScript</small>
+                  <small>Html, Sass, JavaScript</small>
                   <p>
                     If input field are empty it will throw an error and red
                     border. Once input field has the correct value the error
